# brooser

./: .gitignore  LICENSE  README.md  pyproject.toml
contrib/: brooser.desktop
src/brooser/: __main__.py
